# rust-rocket-mysql

./: .env  Cargo.toml  Rocket.toml
src/: main.rs  models.rs  schema.rs
