[package]
name = "rocket_ex1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features= ["json" ]}
serde = "1.0.130"
diesel = { version = "1.4.7", features = ["mysql", "r2d2"] }
diesel_migrations = "1.3"
dotenv = "0.15.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_mysql_pool"]